--- a/long/saleapp/templates/index.html
+++ b/long/saleapp/templates/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Trang chủ</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+            rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/style.css') }}"
+          rel="stylesheet" />
 </head>
 <body>
-    <h1 class="text-center">WEBSITE BÁN HÀNG TRỰC TUYẾN</h1>
-
+    <h1 class="text-center">BÁN HÀNG TRỰC TUYẾN</h1>
     <ul>
         <li><a href="{{ url_for('product_list') }}"> Tất cả </a></li>
         {% for cat in categories %}
-        <li><a href="{{ url_for('product_list', category_id=cat.id) }}"> {{ cat.name }} </a></li>
+        <li><a href="{{ url_for('product_list', category_id=cat.id) }}"> {{cat.name}} </a></li>
         {% endfor %}
     </ul>
 </body>
